feat: post PS2 Hotshot golf 4
feat: post PS2 Hotshot golf 4

--- a/_posts/2025-07-21-PS2-Golf3.md
+++ b/_posts/2025-07-21-PS2-Golf3.md
@@ -1,6 +1,6 @@
 ---
 title: "(PS2) 모두의 골프 3 (Hotshot Golf 3)"
-date: 2025-07-11
+date: 2025-07-21
 categories: [PS2]
 tags: [PS2, golf, hotshot golf, sports]
 image:
@@ -12,7 +12,7 @@ image:
 ## 📜 모두의 골프 3 (Hotshot Golf 3 / みんなのGOLF 3)
 
 『모두의 골프 3 (Everybody’s Golf 3)』**는 Clap Hanz가 개발하고 Sony Computer Entertainment가 배급한 PS2용 골프 게임입니다.  
-일본에서는 2001년 7월 26일에 ‘みんなのGOLF 3’라는 제목으로 첫 출시되었고 :contentReference[oaicite:1]{index=1}, 북미 지역에서는 Hot Shots Golf 3라는 이름으로 2002년 3월 12일 발매되었습니다.  
+일본에서는 2001년 7월 26일에 ‘みんなのGOLF 3’라는 제목으로 첫 출시되었고, 북미 지역에서는 Hot Shots Golf 3라는 이름으로 2002년 3월 12일 발매되었습니다.  
 한국에서는 2002년 5월 16일에 정식 현지화판으로 출시되어 많은 골프 팬의 사랑을 받았습니다.  
 시리즈 최초로 PS2 전용 타이틀로 발매된 이 작품은 전작보다 향상된 그래픽과 물리 엔진, 다채로운 캐릭터·코스·모드를 자랑합니다.  
 
@@ -79,7 +79,8 @@ image:
 
 ## 🚀 맺음말
 
-PS2 시절을 대표하는 골프 명작 **『모두의 골프 3』**는 풍부한 콘텐츠와 직관적 시스템, 사랑스러운 그래픽으로 지금도 많은 팬에게 회자됩니다. 가볍게 즐길 수도, 깊이 파고들어 장비·캐릭터를 육성할 수도 있는 이 작품을 PS2 라이브러리에 반드시 추가해 보세요!
+PS2 시절을 대표하는 골프 명작『모두의 골프 3』는 풍부한 콘텐츠와 직관적 시스템, 사랑스러운 그래픽으로 지금도 많은 팬에게 회자됩니다.  
+가볍게 즐길 수도, 깊이 파고들어 장비·캐릭터를 육성할 수도 있는 이 작품을 PS2 라이브러리에 반드시 추가해 보세요!
 
 
 <!-- *작성자: jjkkim88*  
