feat: fix post title format

--- a/_posts/2026-02-09-ps1-mega-man-8.md
+++ b/_posts/2026-02-09-ps1-mega-man-8.md
@@ -1,5 +1,5 @@
 ---
-title: "(PS1) 록맨 8 / Mega Man 8 / ロックマン8 メタルヒーローズ"
+title: "(PS1) 록맨 8 (Mega Man 8)"
 date: 2026-02-09
 categories: [PS1]
 tags: [PS1, action, platformer, Rockman, MegaMan, Capcom]
