modify nba07 psp and delete last galdiator

--- a/_posts/2026-02-11-psp-nba-live-07.md
+++ b/_posts/2026-02-11-psp-nba-live-07.md
@@ -1,52 +1,131 @@
 ---
 title: "(PSP) NBA 라이브 07 (NBA Live 07)"
+description: "PSP NBA 라이브 07 리뷰. 2006-07 시즌 로스터, 프리스타일 조작, 올스타 위켄드 모드, PSP판 한계점, NBA 2K와의 비교, NBA Live 시리즈의 몰락까지 정리합니다."
 date: 2026-02-11
 categories: [PSP]
 tags: [PSP, Sports, Basketball, NBA, EA]
+image:
+  path: /assets/img/posts/psp/nba07_thumb.png
+  alt: NBA Live 07 PSP Boxart
 ---
 
-## 📜 NBA 라이브 07
+## 📜 NBA 라이브 07 (NBA Live 07)
 
-**NBA 라이브 07**은 **PSP**로 즐길 수 있는 **농구 스포츠 게임**입니다. 거치기에서 즐기던 NBA 라이브 특유의 “한 경기 빠르게 돌리는 재미”를 휴대용으로 가져온 타입이라, 이동 중이나 짧은 세션에 특히 잘 맞습니다.
-
----
-
-## 📅 출시 정보
-
-- **플랫폼**: PSP
-- **장르**: 스포츠 / 농구
-- **키워드**: NBA 라이브, 시즌 기반 스포츠 게임
-
----
-
-## 🛠️ 핵심 시스템
-
-1. **빠른 매치 중심의 전개**  
-   스포츠 게임의 핵심인 “한 경기 바로 시작” 흐름이 강점입니다. 짧게 켜서 1~2쿼터만 즐겨도 만족감이 남는 구성이 잘 어울립니다.
-
-2. **PSP에 맞춘 조작·템포**  
-   휴대용 기기 특성상 화면/버튼이 제한적이기 때문에, 복잡한 동작을 과하게 욕심내기보다 **기본기(패스·드리블·슛·수비 로테이션)**를 깔끔하게 반복하는 플레이가 재미 포인트가 됩니다.
-
-3. **팀/로스터로 만드는 ‘나만의 한 경기’**  
-   NBA 게임은 좋아하는 팀을 고르고, 선호하는 포지션/플레이 스타일에 맞춰 전술과 체감 난이도를 조절하는 맛이 있습니다.
+<div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
+  <img src="/assets/img/posts/psp/nba07_front.jpg" alt="NBA 라이브 07 PSP 표지">
+  <img src="/assets/img/posts/psp/nba07_title.jpg" alt="NBA 라이브 07 타이틀 화면">
+  <img src="/assets/img/posts/psp/nba07_sc1.jpg" alt="NBA 라이브 07 경기 화면">
+  <img src="/assets/img/posts/psp/nba07_sc2.jpg" alt="NBA 라이브 07 플레이 화면">
+</div>
 
 ---
 
-## 🎨 그래픽·사운드
-
-- **그래픽**: PSP 환경에서 경기의 흐름이 잘 읽히는 쪽(코트 시야, 선수 움직임, 기본 연출)에 초점을 둔 스타일을 기대하게 합니다.
-- **사운드**: 스포츠 게임 특유의 관중 함성, 휘슬, 경기장 분위기 등으로 “경기 보는 느낌”을 살리는 요소가 포인트입니다.
+2006년 발매된 EA Sports의 NBA 농구 게임이다. 커버 선수는 **트레이시 맥그레이디(Tracy McGrady)**. PS2, Xbox 360, PC 등 거치형 플랫폼과 동시에 PSP로도 출시되었다. NBA Live 시리즈는 1994년부터 이어진 EA의 간판 농구 프랜차이즈였지만, 이 시기를 기점으로 경쟁작 NBA 2K에 밀리기 시작했고, 결국 콘솔 시리즈는 2019년 NBA Live 19를 마지막으로 사실상 종료되었다. PSP판은 거치형의 축소 이식판으로, 휴대용이라는 장점 외에는 내세울 것이 많지 않은 작품이다.
 
 ---
 
-## 🎯 추천 포인트
+## 📅 NBA 라이브 07 출시 정보
 
-1. **휴대용으로 농구 한 경기 ‘딱’ 즐기고 싶은 경우**
-2. **NBA 팀/선수를 고르는 재미를 좋아하는 경우**
-3. **스포츠 게임에서 빠른 템포와 반복 플레이를 선호하는 경우**
+| 항목 | 내용 |
+|------|------|
+| 플랫폼 | PSP / PS2 / Xbox 360 / PC |
+| 개발 | EA Canada |
+| 퍼블리셔 | EA Sports |
+| 북미 발매 | 2006년 9월 25일 |
+| 커버 선수 | Tracy McGrady (Houston Rockets) |
+| 시즌 데이터 | 2006-07 NBA 시즌 |
+| 장르 | 스포츠 (농구) |
+
+PSP판은 PS2판 기반의 다운스케일 이식이지만, PSP 전용 미니게임 3종과 PS2 다이너스티 연동 기능이 추가되어 단순 축소판은 아니다. Xbox 360판과는 엔진 자체가 다르다.
 
 ---
 
-## 🚀 맺음말
+## ⚙️ NBA 라이브 07 핵심 시스템
 
-『NBA 라이브 07』은 **PSP**에서 부담 없이 즐길 수 있는 NBA 농구 게임을 찾을 때 후보에 넣어볼 만한 작품입니다. 긴 시간 파고들기보다, 가볍게 한 경기씩 돌리며 컨디션을 타는 날에 특히 잘 맞습니다.
+### PSP판 조작 체계
+
+거치형의 프리스타일 조작을 PSP에 맞게 변환한 구조다. 콘솔판과 **조작 배치가 상당히 다르기 때문에** 콘솔판 경험자도 처음부터 다시 익혀야 한다. PSP에는 아날로그 스틱이 하나뿐이라 복잡한 프리스타일 무브는 사실상 쓰기 어렵고, 다이렉트 패스는 Select 버튼으로 선수 아이콘을 띄운 뒤 해당 버튼을 눌러야 하는 방식이라 직관성이 떨어진다.
+
+- **프리스타일 슈퍼스타**: 특정 스타 선수에게 고유 능력이 부여된다. 코비 브라이언트는 슛 범위가 넓고, 스티브 내쉬는 패스 정확도가 비정상적으로 높다
+- **프리스타일 에어**: 덩크와 앨리웁 조작. 림 근처에서 슛 버튼을 누르는 타이밍에 따라 다양한 덩크 모션이 나온다
+
+### PSP 전용 미니게임
+
+전작 NBA Live 06 PSP에는 없었던 PSP 전용 미니게임 3종이 추가되었다. 경기 모드에 질렸을 때 짧게 돌리기 좋고, 클리어하면 보너스 영상이 해금된다.
+
+| 미니게임 | 내용 |
+|---------|------|
+| **2-Ball** | 1:1 퍼스트 투 50 매치. 코트 위 원형 마커에서 슛을 성공시키며 점수를 쌓는다. 파워업 아이템이 코트에 흩어져 있어 경쟁 요소가 있다 |
+| **3Handles** | PSP를 **세로로 잡고** 플레이하는 드리블 패턴 게임. 화면에 표시되는 방향 입력을 제한 시간 안에 따라 해야 한다. 후반으로 갈수록 시간이 짧아진다 |
+| **Superstar Challenge** | 실제 NBA 역사의 명장면을 재현하는 시나리오 모드. 코비 브라이언트로 81점을 넣거나, 특정 경기 상황에서 역전승을 노리는 등의 미션이 주어진다 |
+
+이 중 2-Ball이 가장 재미있다는 평가가 많고, 3Handles는 PSP를 세로로 돌려서 플레이하는 독특한 조작이 특징이다.
+
+### 다이너스티 모드 & PS2 연동
+
+여러 시즌에 걸쳐 팀을 운영하는 커리어 모드다. 선수 트레이드, FA 영입, 드래프트, 스카우트 운영, 선수 피로도 관리 등 구단 경영 요소가 포함되어 있다. PSP판의 가장 독특한 기능은 **PS2 다이너스티 연동**으로, USB 케이블을 통해 PS2판의 다이너스티 세이브를 PSP로 전송하고 이동 중 진행한 뒤 다시 PS2로 돌려보낼 수 있다. 다만 PSP판은 시뮬레이션 속도가 느리고 로딩이 길어서, 한 시즌을 끝까지 돌리려면 인내심이 필요하다.
+
+### 올스타 위켄드
+
+NBA 올스타전을 재현한 모드. 3점 슛 대회, 슬램덩크 대회, 루키 vs 소포모어 챌린지, 올스타 게임을 플레이할 수 있다. 덩크 대회가 가장 재미있다는 평가.
+
+### 멀티플레이
+
+PSP판은 **애드혹(로컬)과 인프라스트럭처(온라인)** 두 가지 무선 멀티플레이를 모두 지원한다. 2:2 또는 5:5 경기가 가능하다. 애드혹은 비교적 매끄럽게 돌아가지만, 온라인은 렉이 있어서 결국 양쪽 다 에이스 선수로 돌파해서 덩크하는 단순한 플레이가 반복된다는 지적을 받았다. 현재는 인프라스트럭처 서버가 종료되어 온라인 플레이는 불가능하다.
+
+---
+
+## 🏀 2006-07 시즌 주요 로스터
+
+이 게임의 로스터는 2006-07 NBA 시즌 개막 기준이다. 지금 보면 레전드급 선수들의 전성기 또는 초기 시절 능력치를 볼 수 있다는 점이 시간 캡슐 같은 재미가 있다.
+
+| 팀 | 주요 선수 | 비고 |
+|-----|----------|------|
+| Miami Heat | 드웨인 웨이드, 샤킬 오닐 | 전년 우승팀. 샤크-웨이드 듀오 |
+| Dallas Mavericks | 더크 노비츠키 | 당시 MVP 후보 |
+| Houston Rockets | 트레이시 맥그레이디, 야오밍 | 커버 선수의 팀 |
+| Phoenix Suns | 스티브 내쉬 | 2연속 MVP 직후 |
+| L.A. Lakers | 코비 브라이언트 | 81점 경기 직후 시즌 |
+| Cleveland Cavaliers | 르브론 제임스 | 커리어 초기 (22세) |
+| San Antonio Spurs | 팀 던컨, 매누 지노빌리, 토니 파커 | 빅3 전성기 |
+
+---
+
+## 🎨 NBA 라이브 07 그래픽·사운드
+
+- **그래픽**: PSP 치고는 무난한 수준이지만, 선수 얼굴 모델링이 뭉개져서 누가 누군지 등번호로 확인해야 하는 경우가 많다. 코트와 유니폼 재현도는 괜찮은 편이지만, 관중석은 2D 판넬이라 가까이 보면 어색하다. 거치형과 비교하면 확실히 열화판이라는 느낌을 지울 수 없다.
+- **사운드**: EA Sports 특유의 라이선스 힙합/R&B 사운드트랙이 수록되어 있다. 경기 중 해설은 마르브 앨버트(Marv Albert)와 스티브 커(Steve Kerr)가 담당하는데, PSP판은 용량 문제로 해설 패턴이 적어서 같은 말이 반복되는 게 금방 느껴진다.
+
+---
+
+## 🎯 NBA 라이브 07 추천 포인트
+
+1. **2006-07 시즌 로스터의 향수** — 코비 81점 시즌, 내쉬 MVP, 르브론 초기 시절 등 당시 NBA를 기억하는 팬에게는 시간 여행
+2. **PSP 전용 미니게임** — 2-Ball, 3Handles, Superstar Challenge 등 PSP에서만 즐길 수 있는 모드가 있다
+3. **PS2 다이너스티 연동** — PS2판과 세이브를 주고받으며 이동 중에도 다이너스티를 진행할 수 있다
+4. **애드혹 멀티플레이** — 친구와 로컬 무선으로 2:2 또는 5:5 대전이 가능하다
+
+---
+
+## 🎮 NBA 라이브 07 플레이 후기
+
+솔직히 말하면, PSP판 NBA Live 07은 추천하기 어려운 게임이다. "PSP로 NBA를 할 수 있다"는 것 자체가 가장 큰 셀링 포인트인데, 막상 해보면 거치형 대비 빠진 게 너무 많다.
+
+가장 큰 문제는 조작감이다. PSP의 아날로그 스틱 하나로는 프리스타일 시스템을 제대로 살릴 수 없고, 결국 패스 돌리다가 빈 자리에서 점프슛을 던지는 단순한 플레이만 반복하게 된다. 거치형과 조작 배치가 달라서 콘솔판 경험이 있어도 처음부터 다시 익혀야 하고, 다이렉트 패스가 Select 경유라 급박한 상황에서는 쓰기 어렵다. 드리블 돌파나 화려한 무브를 시도해봐야 반응이 뻑뻑하고 의도대로 되지 않는다.
+
+PSP 전용 미니게임 3종은 그나마 이 게임에서 건질 수 있는 부분이다. 2-Ball의 1:1 대결은 짧게 즐기기에 나쁘지 않고, Superstar Challenge에서 코비로 81점을 넣어보는 건 나름 재미있는 도전이다. 3Handles는 PSP를 세로로 돌려서 하는 게 참신하긴 한데, 반복하면 금방 질린다. PS2 다이너스티 연동 기능은 아이디어는 좋았지만, PSP판의 느린 로딩 때문에 실제로 이동 중에 다이너스티를 진행하려면 인내심이 상당히 필요하다.
+
+멀티플레이는 애드혹이 그나마 매끄럽게 돌아가지만, 온라인(인프라스트럭처)은 렉 때문에 양쪽 다 에이스 선수로 돌파해서 덩크하는 단순한 게임이 되어버린다는 평이 지배적이었다. 지금은 서버도 종료되어 온라인은 아예 불가능하다.
+
+같은 시기 경쟁작인 NBA 2K7과 비교하면 격차가 더 뚜렷하다. 2K 시리즈가 선수 모션, AI, 물리엔진 면에서 앞서나가기 시작한 게 이 시기부터였고, NBA Live는 이후 계속 뒤쳐졌다. NBA Live 시리즈 자체가 08, 09, 10으로 가면서 점점 평가가 나빠졌고, 결국 2010년 NBA Elite 11으로 리브랜딩을 시도했다가 데모 버그 영상이 밈이 되면서 발매가 취소되는 굴욕을 겪었다. 이후 NBA Live 14로 부활을 시도했지만 2K의 아성을 넘지 못하고, NBA Live 19를 끝으로 콘솔 시리즈는 사실상 종료되었다.
+
+지금 시점에서 이 게임을 굳이 찾아서 할 이유는 거의 없다. 2006-07 시즌 로스터를 보는 향수와 PSP 전용 미니게임의 소소한 재미 정도가 전부이고, PSP 농구 게임이 필요하다면 같은 기기의 NBA 2K 시리즈가 모든 면에서 나은 선택이다. EA Sports의 농구 게임이 어떻게 왕좌에서 내려왔는지를 보여주는 과도기적 작품 정도로 기억될 타이틀이다.
+
+---
+
+## 🔗 NBA 라이브 07 참고 링크
+
+- [NBA 라이브 시리즈 - 나무위키](https://namu.wiki/w/NBA%20Live%20%EC%8B%9C%EB%A6%AC%EC%A6%88)
+- [NBA Live 07 - Wikipedia](https://en.wikipedia.org/wiki/NBA_Live_07)
+- [NBA Live 07 PSP - Metacritic](https://www.metacritic.com/game/nba-live-07/)
+- [NBA Live 07 PSP - GameFAQs](https://gamefaqs.gamespot.com/psp/932979-nba-live-07)
