--- a/_posts/2025-07-21-PS2-Golf3.md
+++ b/_posts/2025-07-21-PS2-Golf3.md
@@ -1,87 +1,166 @@
 ---
-title: "(PS2) 모두의 골프 3 (Hotshot Golf 3)"
+title: "(PS2) 모두의 골프 3 (Everybody's Golf 3)"
+description: "PS2 모두의 골프 3 리뷰. 한국 정발 정보, 북미판·일판 캐릭터 차이, 6개 코스, 투어 모드 단계별 구성, 시리즈 내 위치까지 정리합니다."
 date: 2025-07-21
 categories: [PS2]
-tags: [PS2, golf, hotshot golf, sports]
+tags: [PS2, golf, sports, Sony]
 image:
-  path: /assets/img/posts/ps2/golf3_thumb.jpg   # 썸네일 & 미리보기
-  alt:  Hotshot Golf 3 PS2 Boxart
-  lqip: data:image/webp;base64,...         # 선택: LQIP 사용시
+  path: /assets/img/posts/ps2/golf3_thumb.jpg
+  alt: Everybody's Golf 3 PS2 Boxart
 ---
 
-## 📜 모두의 골프 3 (Hotshot Golf 3 / みんなのGOLF 3)
-
-『모두의 골프 3 (Everybody’s Golf 3)』**는 Clap Hanz가 개발하고 Sony Computer Entertainment가 배급한 PS2용 골프 게임입니다.  
-일본에서는 2001년 7월 26일에 ‘みんなのGOLF 3’라는 제목으로 첫 출시되었고, 북미 지역에서는 Hot Shots Golf 3라는 이름으로 2002년 3월 12일 발매되었습니다.  
-한국에서는 2002년 5월 16일에 정식 현지화판으로 출시되어 많은 골프 팬의 사랑을 받았습니다.  
-시리즈 최초로 PS2 전용 타이틀로 발매된 이 작품은 전작보다 향상된 그래픽과 물리 엔진, 다채로운 캐릭터·코스·모드를 자랑합니다.  
-
----
-
-<!-- <img src="/assets/img/posts/ps1/DQM_front.jpg" alt="DQM 표지">
-![DQM표지](/assets/img/posts/ps1/DQM_front.jpg){: width="250px" } -->
+## 📜 모두의 골프 3 (Everybody's Golf 3 / みんなのGOLF 3)
 
 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
-  <img src="/assets/img/posts/ps2/golf3_front.jpg" alt="모두의 골프 3 표지">
-  <img src="/assets/img/posts/ps2/golf3_title.jpg" alt="모두의 골프 3 타이틀">
-  <img src="/assets/img/posts/ps2/golf3_sc1.jpg" alt="모두의 골프 3 스샷">
-  <img src="/assets/img/posts/ps2/golf3_sc2.jpg" alt="모두의 골프 3 스샷">
+  <img src="/assets/img/posts/ps2/golf3_front.jpg" alt="모두의 골프 3 PS2 표지">
+  <img src="/assets/img/posts/ps2/golf3_title.jpg" alt="모두의 골프 3 타이틀 화면">
+  <img src="/assets/img/posts/ps2/golf3_sc1.jpg" alt="모두의 골프 3 코스 플레이 화면">
+  <img src="/assets/img/posts/ps2/golf3_sc2.jpg" alt="모두의 골프 3 스윙 화면">
 </div>
 
+---
 
-## ⚙️ 핵심 시스템
-
-1. **골프 스윙 메커니즘**  
-   - ‘3타이밍’ 스윙 방식으로, 파워·정확도·스핀을 조절하는 직관적 UI를 제공합니다.  
-
-2. **캐릭터 & 커스터마이즈**  
-   - 전작의 12명에서 15명으로 늘어난 플레이어 캐릭터와 7종의 캐디 중 선택 가능.  
-   - ‘그린 포인트(Green Points)’를 획득해 장비·의상·특수 기술을 구입·강화할 수 있습니다.  
-
-3. **코스 구성**  
-   - 일본·북미·유럽 스타일의 6개 기본 코스 제공  
-   - 숨겨진 보너스 코스를 포함해 총 7개 코스를 순회하며 챌린지를 즐길 수 있습니다.  
-
-4. **모드 & 멀티플레이**  
-   - 싱글 플레이 ‘챔피언십’, ‘스토리’ 모드  
-   - 로컬 최대 4인 동시 플레이 지원 (스트로크 · 매치플레이 등).  
+**Clap Hanz** 개발, **Sony Computer Entertainment** 배급의 PS2용 골프 게임이다. 시리즈 최초의 PS2 타이틀로, PS1 시절의 전작들에 비해 그래픽과 물리 엔진이 크게 향상되었다. 일본 국내 출하량 약 139만 장, 북미 약 100만 장으로 전 세계 누적 **215만 장 이상** 판매된 시리즈의 히트작이다. 한국에서도 2002년 정식 발매되었으나, 일판이 아닌 **북미판 기반**으로 출시되어 캐릭터 디자인이 다르다는 점이 당시 화제가 되었다.
 
 ---
 
-## 🔍 주요 특징
+## 📅 모두의 골프 3 출시 정보
 
-- **향상된 그래픽·물리 엔진**  
-  PS2의 3D 성능을 활용해 잔디 텍스처, 공 궤적, 바람 효과 등이 전작 대비 눈에 띄게 발전했습니다.  
+| 항목 | 내용 |
+|------|------|
+| 플랫폼 | PlayStation 2 |
+| 개발 | Clap Hanz |
+| 퍼블리셔 | Sony Computer Entertainment |
+| 일본 발매 | 2001년 7월 26일 |
+| 북미 발매 | 2002년 3월 2일 (Hot Shots Golf 3) |
+| 한국 발매 | 2002년 5월 16일 |
+| 유럽 발매 | 미발매 |
+| 장르 | 스포츠 (골프) |
+| 판매량 | 전 세계 215만 장 이상 |
 
-- **친근한 캐릭터 디자인**  
-  귀여운 SD 스타일의 캐릭터와 개성 있는 캐디들이 라운드를 더욱 재미있게 만들어 줍니다.  
-
-- **다채로운 도전 요소**  
-  ‘골든 커트 챌린지’, ‘스크램블’, ‘퍼팅 콘테스트’ 등 다양한 미니 게임이 포함되어 있어 골프 초보자도 부담 없이 즐길 수 있습니다.  
-
-- **풍부한 커스터마이즈**  
-  장비와 의상을 꾸미는 재미가 있어, 나만의 플레이 스타일을 만들어 가는 즐거움을 느낄 수 있습니다.  
-
----
-
-## 🎯 추천 포인트
-
-1. **시리즈 입문용 최고의 선택**  
-   – 간단한 조작과 친숙한 난이도로 PS2 골프 게임 첫 경험에 안성맞춤입니다.   
-2. **가족·친구와 함께 즐기는 파티 스포츠**  
-   – 최대 4인까지 함께 플레이 가능해, 홈 파티나 모임에 활기를 더해 줍니다.  
-3. **수집·육성 요소**  
-   – 캐릭터·장비·코스 해금과 그린 포인트 시스템으로 장기 플레이에도 지루함이 없습니다.  
-4. **리플레이 가치**  
-   – 매 회 다른 캐릭터·모드·코스를 선택하며 새로운 재미를 발견할 수 있습니다.  
+북미에서는 'Hot Shots Golf 3', 일본에서는 'みんなのGOLF 3'이라는 이름으로 발매되었다. 유럽에는 발매되지 않았다.
 
 ---
 
-## 🚀 맺음말
+## 🇰🇷 모두의 골프 3 한국 정발
 
-PS2 시절을 대표하는 골프 명작『모두의 골프 3』는 풍부한 콘텐츠와 직관적 시스템, 사랑스러운 그래픽으로 지금도 많은 팬에게 회자됩니다.  
-가볍게 즐길 수도, 깊이 파고들어 장비·캐릭터를 육성할 수도 있는 이 작품을 PS2 라이브러리에 반드시 추가해 보세요!
+한국에서는 2002년 5월 16일, **SCEK(Sony Computer Entertainment Korea)**를 통해 정식 발매되었다. PS2 초기 한국 시장에서 정식으로 나온 스포츠 게임 중 하나로, 당시 PS2를 막 구입한 유저들에게 입문용 타이틀로 많이 선택되었다. 골프 룰을 몰라도 3버튼만으로 즐길 수 있다는 접근성 덕분에, 게임을 잘 모르는 가족이나 친구와 함께 하는 파티 게임으로도 인기가 있었다.
 
+다만 한국판은 **북미판 기반**으로 출시되었다는 점이 아쉬운 부분이다. 일본판의 나나코, 사토루 같은 애니메이션풍 SD 캐릭터 대신 **북미판의 서양식 등신대 캐릭터 디자인**이 적용되어 있어, 일본판을 기대했던 유저들 사이에서 위화감이 있었다. 일부러 일판을 구해서 플레이하는 경우도 있었을 정도다. 내셔널 토너먼트 모드가 삭제된 것 외에는 게임 내용 자체는 북미판과 동일하며, 메뉴와 UI는 영어 그대로다.
 
-<!-- *작성자: jjkkim88*  
-*발행일: 2025년 7월 11일*   -->
+후속작 모두의 골프 4는 유럽판(Everybody's Golf) 기반으로 한국 정발되어, 3편에서 지적받았던 캐릭터 디자인 문제가 해소되었다.
+
+---
+
+## ⚙️ 모두의 골프 3 핵심 시스템
+
+### 3버튼 스윙
+
+시리즈 전통의 직관적인 스윙 시스템이다. 첫 번째 버튼으로 파워 게이지를 시작하고, 두 번째로 파워를 결정하고, 세 번째로 임팩트 정확도를 맞춘다. 임팩트 타이밍에 따라 슬라이스(오른쪽 휘어짐)나 훅(왼쪽 휘어짐)이 발생하며, 정확한 타이밍에 맞추면 "나이스 샷"이 된다. 이 작품부터 **슈퍼 사이드 스핀** 등 숨겨진 고급 테크닉도 도입되었다.
+
+### 투어 모드
+
+싱글 플레이의 메인 모드로, 7단계 난이도에 걸쳐 대회를 진행한다.
+
+| 단계 | 목표 스코어 |
+|------|-----------|
+| 비기너 | +2 ~ +3 |
+| 아마추어 | ±0 ~ +2 |
+| 세미프로 | -4 ~ -2 |
+| 프로 | -5 ~ -1 |
+| 투어프로 | -7 ~ -5 |
+| 톱프로 | -10 ~ -3 |
+| 킹스 | -8 ~ -3 |
+
+각 단계에 봄·여름·가을·겨울 4개 대회가 배정되어 있고, 우승 시 장비와 캐릭터가 해금된다.
+
+### VS 모드 (캐릭터 해금)
+
+투어 모드를 진행하면 AI 캐릭터와 1:1 대결이 가능해진다. 이 대결에서 승리하면 해당 캐릭터가 플레이어블로 해금된다. 해금 캐릭터마다 파워, 컨트롤, 스핀 등 능력치가 다르기 때문에 원하는 플레이 스타일에 맞는 캐릭터를 노려서 해금하는 재미가 있다.
+
+### 그린 포인트 & 커스터마이즈
+
+라운드 중 좋은 플레이를 할 때마다 그린 포인트가 쌓이고, 이를 사용해 숍에서 장비(클럽, 볼)와 의상을 구매할 수 있다. VS 모드에서 캐릭터를 쓰러뜨리면 해당 캐릭터의 5번째 코스튬이 숍에 추가되는 구조다.
+
+---
+
+## ⛳ 모두의 골프 3 코스
+
+총 6개 코스가 수록되어 있다. 시리즈 중 코스 수가 가장 적은 편이지만, 각 코스의 개성은 뚜렷하다.
+
+| 코스 | 테마 |
+|------|------|
+| 사쿠라야마 온천 C.C. | 일본풍 온천 리조트 |
+| 알로하 비치 리조트 | 하와이풍 해변 코스 |
+| 웨스턴 밸리 C.C. | 미국 서부 사막 |
+| 백파이프 클래식 | 스코틀랜드풍 링크스 |
+| 유나이티드 포레스트 G.C. | 삼림 코스 |
+| 뉴 아케보노 G.C. | 숨겨진 보너스 코스 |
+
+---
+
+## 👥 모두의 골프 3 캐릭터
+
+일판과 북미판(한국판 포함)의 캐릭터가 완전히 다르다.
+
+### 북미판 / 한국판
+
+| 초기 캐릭터 | 해금 캐릭터 |
+|------------|-----------|
+| Tiffany | Spike |
+| Jonnie | Lin |
+| Pete | Mitch |
+| | Estelle |
+| | Toni |
+| | John (실존 골퍼 존 달리 기반) |
+| | Kamala |
+| | Zeus |
+| | Blue |
+| | T-Bone |
+| | Louise |
+| | Stacey |
+
+시리즈 최초로 실존 골퍼(존 달리)를 모델로 한 캐릭터가 등장했다.
+
+### 일본판
+
+나나코, 사토루, 곤조 등 애니메이션풍의 SD 캐릭터가 등장한다. 글로리아(성우: 이노우에 키쿠코), 스즈키(성우: 니시무라 토모미) 등 캐릭터마다 **성우가 배정**되어 플레이 중 음성이 나오는 것이 이 작품부터 도입된 요소다.
+
+---
+
+## 🎨 모두의 골프 3 그래픽·사운드
+
+- **그래픽**: PS1에서 PS2로 넘어오면서 가장 체감이 큰 부분이다. 잔디 텍스처, 공의 궤적, 바람에 흔들리는 나무, 물 위에 반사되는 빛 등이 전작 대비 눈에 띄게 향상되었다. 캐릭터 모델링은 일판이 SD 스타일, 북미판이 등신대 스타일로 큰 차이가 있다.
+- **사운드**: 경쾌한 BGM이 라운드 분위기를 가볍게 잡아준다. 이 작품부터 캐릭터 보이스가 도입되어 나이스 샷, 버디, 보기 등 상황에 따라 캐릭터가 반응한다.
+
+---
+
+## 🎯 모두의 골프 3 추천 포인트
+
+1. **PS2 골프 게임 입문용** — 3버튼 스윙이 직관적이라 골프 게임을 처음 접하는 사람도 바로 즐길 수 있다
+2. **로컬 멀티플레이** — 최대 4인 동시 플레이. 스트로크, 매치플레이 등 파티 게임으로 활용 가능
+3. **캐릭터 해금·수집 요소** — VS 모드에서 캐릭터를 하나씩 해금하고, 그린 포인트로 장비를 모으는 육성 루프가 있다
+4. **한국 정발 타이틀** — PS2 시대에 정식 발매된 스포츠 게임을 찾는 경우
+
+---
+
+## 🎮 모두의 골프 3 플레이 후기
+
+모두의 골프 시리즈를 처음 접한 게 이 3편이었다. PS2를 처음 사고 같이 산 게임 중 하나였는데, 골프 게임이라고 해서 어려울 줄 알았더니 3버튼 스윙이 직관적이라 몇 홀만 해보면 바로 감이 잡혔다. 파워 게이지를 올리고 → 멈추고 → 임팩트 타이밍 맞추기. 이 단순한 구조가 중독성이 있어서, "한 라운드만 더"를 반복하다 보면 시간이 금방 지나갔다.
+
+가장 재미있었던 건 VS 모드로 캐릭터를 하나씩 해금하는 과정이었다. AI 상대가 난이도가 올라갈수록 정말 잘 쳐서, 한두 타 차이로 지면 괜히 억울해서 또 도전하게 된다. 새 캐릭터가 해금되면 능력치를 확인하고 "이번에는 파워형으로 해볼까" 하면서 다시 라운드를 도는 루프가 골프 게임치고는 의외로 육성 게임에 가까운 느낌이었다.
+
+한국 정발판이 북미판 기반이라 캐릭터가 서양식 디자인인 건 솔직히 처음에 좀 어색했다. 나중에 일판 스크린샷을 보고 "이쪽이 훨씬 낫잖아" 싶었는데, 막상 플레이하다 보면 캐릭터 디자인은 크게 신경 쓰이지 않게 된다. 어차피 게임 중에는 코스와 공 궤적만 보고 있으니까. 다만 일판에서 캐릭터마다 성우 음성이 들어간다는 걸 알고 나면, 한국판이 그 부분에서 아쉽긴 하다.
+
+친구들과 4인 멀티플레이가 이 게임의 진짜 꽃이었다. 골프를 잘 모르는 사람도 몇 분이면 조작을 익힐 수 있어서, 누구나 바로 합류할 수 있다는 게 큰 장점이었다. 누군가 OB를 내면 다 같이 웃고, 칩인 이글이 나오면 난리가 나는 — 요즘 온라인 게임에서는 느끼기 어려운 거실 앞 TV의 재미가 있었다.
+
+후속작인 모두의 골프 4가 코스 수도 더 많고 시스템도 개선되었기 때문에, 지금 시점에서 3편과 4편 중 하나를 고르라면 4편을 추천한다. 하지만 3편이 시리즈의 PS2 세대를 연 작품이라는 점, 그리고 한국에서 정식 발매되어 많은 사람들의 PS2 첫 경험에 함께했다는 점에서 나름의 의미가 있는 타이틀이다.
+
+---
+
+## 🔗 모두의 골프 3 참고 링크
+
+- [모두의 골프 시리즈 - 나무위키](https://namu.wiki/w/%EB%AA%A8%EB%91%90%EC%9D%98%20%EA%B3%A8%ED%94%84%20%EC%8B%9C%EB%A6%AC%EC%A6%88)
+- [Hot Shots Golf 3 - Everybody's Hot Shots Wiki (Fandom)](https://everybodys-hotshots.fandom.com/wiki/Hot_Shots_Golf_3)
+- [みんなのゴルフ3 完全攻略 - XNEO](https://xneo.jp/min-golf3/)
+- [Hot Shots Golf 3 - GameFAQs](https://gamefaqs.gamespot.com/ps2/470804-hot-shots-golf-3)
