modify golf4 posting

--- a/_posts/2025-07-21-PS2-Golf4.md
+++ b/_posts/2025-07-21-PS2-Golf4.md
@@ -1,105 +1,171 @@
 ---
-title: "(PS2) 모두의 골프 4 (Hotshot Golf 4)"
+title: "(PS2) 모두의 골프 4 (Everybody's Golf 4)"
+description: "PS2 모두의 골프 4 리뷰. 시리즈 최대 규모 15개 코스·24명 캐릭터, 시리즈 최초 온라인 대전, 한국 정발, 전작 3편과의 비교까지 정리합니다."
 date: 2025-07-21
 categories: [PS2]
-tags: [PS2, golf, hotshot golf, sports]
+tags: [PS2, golf, sports, Sony]
 image:
-  path: /assets/img/posts/ps2/golf4_thumb.png   # 썸네일 & 미리보기
-  alt:  Hotshot Golf 4 PS2 Boxart
-  lqip: data:image/webp;base64,...         # 선택: LQIP 사용시
+  path: /assets/img/posts/ps2/golf4_thumb.png
+  alt: Everybody's Golf 4 PS2 Boxart
 ---
 
-## 📜 모두의 골프 4 (Hotshot Golf 4 / みんなのGOLF 4)
-
-《모두의 골프 4》는 2003년 11월 27일 일본에서 PS2 전용으로 발매된 시리즈 네 번째 넘버링 타이틀입니다.  
-역대 최대 규모의 코스(13개)와 골퍼(24명), 캐디(10명)를 자랑하며 풍부한 모드와 세련된 그래픽을 선보인 작품입니다
-
----
-
-<!-- <img src="/assets/img/posts/ps1/DQM_front.jpg" alt="DQM 표지">
-![DQM표지](/assets/img/posts/ps1/DQM_front.jpg){: width="250px" } -->
+## 📜 모두의 골프 4 (Everybody's Golf 4 / みんなのGOLF 4)
 
 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
-  <img src="/assets/img/posts/ps2/golf4_front.jpg" alt="모두의 골프 4 표지">
-  <img src="/assets/img/posts/ps2/golf4_title.jpg" alt="모두의 골프 4 타이틀">
-  <img src="/assets/img/posts/ps2/golf4_sc1.jpg" alt="모두의 골프 4 스샷">
-  <img src="/assets/img/posts/ps2/golf4_sc2.jpg" alt="모두의 골프 4 스샷">
+  <img src="/assets/img/posts/ps2/golf4_front.jpg" alt="모두의 골프 4 PS2 표지">
+  <img src="/assets/img/posts/ps2/golf4_title.jpg" alt="모두의 골프 4 타이틀 화면">
+  <img src="/assets/img/posts/ps2/golf4_sc1.jpg" alt="모두의 골프 4 코스 플레이 화면">
+  <img src="/assets/img/posts/ps2/golf4_sc2.jpg" alt="모두의 골프 4 캐릭터 선택 화면">
 </div>
 
+---
 
-## ⚙️ 핵심 시스템
-
-1. **코스 & 캐릭터**  
-   - 신규 10개 코스 + 전작 이월 5개 코스로 총 15개 코스  
-   - 24명의 플레이어 캐릭터, 10명의 캐디 수록
-
-2. **스윙 메커니즘**  
-   - ‘3타이밍’ 방식의 직관적 UI: 파워·정확도·스핀을 세밀히 조절
-
-3. **Everybody’s Points**  
-   - 플레이 중 획득한 포인트로 장비·의상·특별 아이템 해금 가능
-
-4. **온라인 플레이**  
-   - 네트워크 어댑터 사용 시 최대 32인 실시간 토너먼트  
-   - 1대1 대전 모드 지원 (일본판 제외)
-
-5. **고급 모드**  
-   - 샷 예측 그리드를 제거한 ‘Advanced Mode’ 해금
+**Clap Hanz** 개발, **Sony Computer Entertainment** 배급의 PS2용 골프 게임으로, 시리즈 네 번째 넘버링 타이틀이다. 전작 모두의 골프 3에서 6개였던 코스가 **15개**로 늘어나고, 캐릭터도 **24명**으로 확충되어 시리즈 최대 규모를 자랑한다. 가장 큰 변화는 **시리즈 최초의 온라인 대전** 도입으로, 네트워크 어댑터를 통해 최대 50인 리얼타임 토너먼트가 가능했다. 일본에서만 **171만 장 이상** 판매되었고, 전 세계 누적 **200만 장 이상** 기록한 시리즈 최고 히트작이다. 파미통 36점(40점 만점).
 
 ---
 
-## 🎨 그래픽·사운드
+## 📅 모두의 골프 4 출시 정보
 
-- **그래픽**  
-  PS2 성능을 최대한 활용해 나무의 흔들림, 물 표면 반사 등 사실적인 비주얼 구현  
-  캐릭터 모델 디테일과 필드 연출이 전작 대비 대폭 강화
+| 항목 | 내용 |
+|------|------|
+| 플랫폼 | PlayStation 2 |
+| 개발 | Clap Hanz |
+| 퍼블리셔 | Sony Computer Entertainment |
+| 일본 발매 | 2003년 11월 27일 (みんなのGOLF 4) |
+| 북미 발매 | 2004년 8월 17일 (Hot Shots Golf Fore!) |
+| 유럽 발매 | 2005년 9월 23일 (Everybody's Golf) |
+| 한국 발매 | 2006년 1월 19일 |
+| 판매량 | 전 세계 200만 장 이상 |
+| 파미통 | 36/40 |
 
-- **사운드트랙**  
-  경쾌한 오리지널 BGM과 캐디·골퍼 음성 효과로 필드의 현장감 강조
-
----
-
-## 🕹️ 플레이 모드
-
-- **Tour Mode**  
-  전체 시즌 토너먼트를 진행하며 랭킹과 포인트 경쟁
-
-- **Tournament Mode**  
-  즉시 대전이 가능한 플러그 앤 플레이 방식
-
-- **VS Mode**  
-  언락 캐릭터·의상을 해금하기 위한 대전 모드
-
-- **Training Mode**  
-  초보자용 튜토리얼과 실습 필드 제공
-
-- **Online Head-to-Head / Real Time Tournament**  
-  온라인 대전 및 실시간 토너먼트로 전 세계 플레이어와 겨룸
+일본에서 첫 주 47만 5천 장 이상을 판매하며 폭발적인 출발을 보였고, 2004년 1월에 일본 내 100만 장을 돌파했다.
 
 ---
 
-## 🎯 추천 포인트
+## 🇰🇷 모두의 골프 4 한국 정발
 
-1. **방대한 콘텐츠**  
-   시리즈 최대 규모의 코스·캐릭터·모드 제공으로 롱플레이에 최적
+한국에서는 2006년 1월 19일에 정식 발매되었다. 전작 3편이 북미판 기반으로 출시되어 서양식 캐릭터 디자인에 대한 불만이 있었는데, 4편에서는 그 점이 개선되어 보다 친숙한 캐릭터 디자인으로 플레이할 수 있게 되었다.
 
-2. **접근성 & 깊이**  
-   간단한 조작으로도 누구나 즐길 수 있으면서, 고급 모드 해금 후에는 전략적 플레이 가능
-
-3. **소셜 경쟁**  
-   로컬 최대 4인 플레이와 온라인 토너먼트로 가족·친구·전 세계 유저와 함께 즐길 수 있음
-
-4. **비주얼 진화**  
-   PS2 그래픽의 정수를 보여주는 사실적인 필드 묘사와 캐릭터 연출
+3편에 이어 연속으로 한국 정발이 이루어진 점에서, 모두의 골프 시리즈가 한국 PS2 시장에서 일정한 수요가 있었음을 보여준다. 골프 룰을 몰라도 즐길 수 있는 접근성 덕분에 가족 단위 파티 게임으로 꾸준히 선택되었고, 3편으로 입문한 유저들이 4편으로 자연스럽게 넘어온 경우가 많았다.
 
 ---
 
-## 🚀 맺음말
+## ⚙️ 모두의 골프 4 핵심 시스템
 
-2003년작 《모두의 골프 4》는 시리즈 전통을 계승하면서도 과감한 콘텐츠 확대와 최신 기술을 접목한 명작입니다.  
-PS2 라이브러리에 꼭 추가해, 누구나 손쉽게 치고 즐기며 경쟁할 수 있는 골프의 재미를 만끽해 보세요!
+### 3버튼 스윙 & 이지 모드
 
+전작과 동일한 3버튼 스윙(파워 → 정확도 → 임팩트)을 계승하면서, 이 작품에서 **이지 모드**가 처음 도입되었다. 이지 모드에서는 임팩트 판정이 느슨해져 초보자도 나이스 샷을 쉽게 낼 수 있다. 반대로 **어드밴스드 모드**를 해금하면 샷 예측 그리드가 사라져 바람과 지형을 직접 계산해야 하는 상급자용 플레이가 가능하다.
 
+### 투어 모드
 
-<!-- *작성자: jjkkim88*  
-*발행일: 2025년 7월 11일*   -->
+싱글 플레이의 메인 모드. 비기너부터 최상위까지 단계별 대회를 진행하며, 각 단계 우승 시 새로운 코스와 캐릭터가 해금된다. 전작과 구조는 비슷하지만 코스 수가 대폭 늘어 볼륨이 커졌다.
+
+### VS 모드 (캐릭터 해금)
+
+전작과 마찬가지로 AI 캐릭터와 1:1 매치를 벌여 승리하면 해당 캐릭터가 해금된다. 24명 중 초기 사용 가능 캐릭터는 소수이고, 나머지는 모두 VS 모드를 통해 해금해야 한다. 후반 해금 캐릭터일수록 능력치가 높지만, VS 대결 난이도도 함께 올라간다.
+
+### Everybody's 포인트 & 커스터마이즈
+
+라운드 성적에 따라 포인트가 쌓이고, 숍에서 클럽, 볼, 의상 등을 구매할 수 있다. 전작의 그린 포인트 시스템을 계승·확장한 형태다.
+
+### 온라인 대전 (시리즈 최초)
+
+PS2 네트워크 어댑터를 사용해 **최대 50인 리얼타임 토너먼트**가 가능했다. 콘솔 골프 게임에서 이 규모의 동시 접속 대전은 당시 기준으로 파격적이었다. 1:1 헤드투헤드 대전도 지원했다. 일본판에서는 온라인 대전 대신 **전국대회 모드**라는 이름으로 운영되었으며, 온라인 서비스는 **2007년 7월 31일**에 종료되었다.
+
+---
+
+## ⛳ 모두의 골프 4 코스
+
+12개 풀 코스 + 1개 파3 코스 + 2개 미니골프 코스로 총 **15개 코스**가 수록되어 있다. 전작의 6개에서 대폭 늘어난 시리즈 최대 규모다.
+
+| 코스 | 테마 |
+|------|------|
+| 사쿠라야마 온천 C.C. | 일본풍 온천 리조트 (3편 이월) |
+| 알로하 비치 리조트 | 하와이풍 해변 (3편 이월) |
+| 백파이프 클래식 | 스코틀랜드풍 링크스 (3편 이월) |
+| 후지자쿠라 C.C. | 후지산 배경 코스 |
+| 실크 로드 C.C. | 사막·오아시스 코스 |
+| 글레이시어 포레스트 G.C. | 빙하·숲 코스 |
+| 와일드 그린 C.C. | 열대 우림 코스 |
+| 캐슬 링크스 | 성곽 배경 링크스 |
+| 유나이티드 포레스트 G.C. | 삼림 코스 (3편 이월) |
+| 그 외 | 추가 풀 코스 + 파3 코스 + 미니골프 2종 |
+
+전작에서 이월된 코스도 그래픽이 4편 수준으로 리뉴얼되어 있어, 같은 코스라도 시각적 차이가 크다.
+
+---
+
+## 👥 모두의 골프 4 캐릭터
+
+총 24명. 일판과 북미판/유럽판의 캐릭터 디자인과 이름이 다르다.
+
+### 일본판 주요 캐릭터
+
+| 초기 캐릭터 | 해금 캐릭터 (일부) |
+|------------|------------------|
+| 아야 | 글로리아 (3편 복귀) |
+| 카즈마 | 스즈키 (3편 복귀) |
+| 프린 | 나나코 (3편 복귀) |
+| 실비아 | 빅 에어 |
+| | 더글러스 |
+| | 아야카 |
+
+12명은 4편 신규, 6명은 2편 복귀, 6명은 3편 복귀 캐릭터로 구성되어 있다.
+
+### 북미판/유럽판
+
+북미판에서는 **잭 & 덱스터**, **라쳇 & 클랭크** 시리즈의 캐릭터가 게스트로 등장한다. 이 게스트 캐릭터는 일본판에는 포함되어 있지 않다.
+
+---
+
+## 🔍 모두의 골프 3 vs 4 비교
+
+| 구분 | 모두의 골프 3 (2001) | 모두의 골프 4 (2003) |
+|------|---------------------|---------------------|
+| 코스 수 | 6개 | **15개** (풀 12 + 파3 1 + 미니 2) |
+| 캐릭터 수 | 15명 | **24명** |
+| 온라인 | 없음 | **최대 50인 토너먼트** |
+| 이지 모드 | 없음 | **신규 도입** |
+| 어드밴스드 모드 | 없음 | 해금 가능 |
+| 게스트 캐릭터 | 없음 | 잭 & 덱스터, 라쳇 & 클랭크 (북미/유럽) |
+| 일본 판매량 | 약 139만 장 | **약 171만 장** |
+| 파미통 | - | **36/40** |
+
+거의 모든 면에서 4편이 3편의 상위호환이다. 코스 수가 2.5배로 늘어났고, 온라인 대전이 추가되었으며, 이지 모드로 초보자 진입장벽까지 낮아졌다.
+
+---
+
+## 🎨 모두의 골프 4 그래픽·사운드
+
+- **그래픽**: 3편에서도 PS2 수준에서 좋은 평가를 받았지만, 4편은 한 단계 더 올라갔다. 나무의 흔들림, 물 표면 반사, 잔디 질감 등이 더욱 세밀해졌고, 코스마다 시간대와 날씨 변화가 적용되어 같은 코스도 분위기가 달라진다. 캐릭터 모델링도 디테일이 강화되었다.
+- **사운드**: 경쾌한 BGM이 라운드 분위기를 잡아주는 건 전작과 동일. 캐릭터 보이스가 더 다양해져서 상황별 반응이 풍부해졌다. 나이스 샷, 이글, 홀인원 등 특수 상황에서의 연출과 효과음이 쾌감을 더한다.
+
+---
+
+## 🎯 모두의 골프 4 추천 포인트
+
+1. **시리즈 최대 볼륨** — 15개 코스, 24명 캐릭터로 오래 즐길 수 있다
+2. **이지 모드 도입** — 골프 게임 첫 경험자도 부담 없이 시작 가능
+3. **어드밴스드 모드** — 숙련자에게는 예측 그리드 없이 플레이하는 도전 요소
+4. **한국 정발** — 전작에 이어 연속 한국 정발된 시리즈
+
+---
+
+## 🎮 모두의 골프 4 플레이 후기
+
+3편을 먼저 하고 4편으로 넘어왔는데, 첫인상은 "코스가 이렇게 많아?"였다. 3편의 6개 코스를 돌고 돌아서 거의 외울 지경이었는데, 4편에서 15개가 되니까 한참을 새 코스를 발견하는 재미로 플레이했다. 특히 후지자쿠라 코스의 후지산 배경이나, 글레이시어 포레스트의 빙하 코스처럼 테마가 뚜렷한 코스들이 눈을 즐겁게 해준다.
+
+이지 모드가 추가된 건 가족과 함께 할 때 큰 차이를 만들었다. 3편에서는 임팩트 타이밍을 맞추지 못하는 사람이 계속 OB를 내면서 흥미를 잃는 경우가 있었는데, 4편의 이지 모드에서는 타이밍 판정이 느슨해서 누구나 일단 공을 제대로 날릴 수 있다. 그 덕에 파티 게임으로서의 완성도가 3편보다 확실히 올라갔다.
+
+VS 모드로 캐릭터를 해금하는 재미는 3편에서 이어진 핵심 루프인데, 4편에서는 24명이라 해금할 양이 훨씬 많다. 후반 캐릭터일수록 AI가 정말 잘 쳐서, -10 이상을 찍어야 이길 수 있는 수준이 되면 슈퍼 사이드 스핀 같은 고급 테크닉을 익혀야 한다. 캐주얼 골프 게임인 줄 알았는데 파고들면 의외로 깊이가 있다.
+
+3편과 비교하면 거의 모든 면에서 4편이 낫다. 코스 수, 캐릭터 수, 그래픽, 이지 모드, 온라인까지 — 3편이 시리즈를 PS2에 안착시킨 작품이라면, 4편은 그 기반 위에서 모든 걸 확장한 완성형이다. PS2 골프 게임을 하나만 고르라면 주저 없이 4편을 추천한다. 모두의 골프 시리즈가 왜 플레이스테이션의 간판 스포츠 게임이 되었는지를 가장 잘 보여주는 타이틀이다.
+
+---
+
+## 🔗 모두의 골프 4 참고 링크
+
+- [모두의 골프 시리즈 - 나무위키](https://namu.wiki/w/%EB%AA%A8%EB%91%90%EC%9D%98%20%EA%B3%A8%ED%94%84%20%EC%8B%9C%EB%A6%AC%EC%A6%88)
+- [Hot Shots Golf Fore! - Everybody's Hot Shots Wiki (Fandom)](https://everybodys-hotshots.fandom.com/wiki/Hot_Shots_Golf_Fore!)
+- [みんなのGOLF 4 - Wikipedia (일본어)](https://ja.wikipedia.org/wiki/%E3%81%BF%E3%82%93%E3%81%AA%E3%81%AEGOLF_4)
+- [Hot Shots Golf Fore! - GameFAQs](https://gamefaqs.gamespot.com/ps2/919460-hot-shots-golf-fore)
