--- a/_posts/2025-07-24-PSP-PES6.md
+++ b/_posts/2025-07-24-PSP-PES6.md
@@ -1,98 +1,180 @@
 ---
-title: "(PSP) 위닝일레븐 10 프로에볼루션 사커 6 (Pro Evolution Soccer 6)"
+title: "(PSP) 위닝일레븐 10 (Pro Evolution Soccer 6)"
+description: "PSP 위닝일레븐 10 리뷰. PES5 PSP 대비 개선점, 마스터 리그 추가, PSP판 한계, PES 황금기의 마지막 넘버링, 아드리아노 전설까지 정리합니다."
 date: 2025-07-24
 categories: [PSP]
-tags: [PSP, sports, pes, winning, soccer, football]
+tags: [PSP, sports, pes, winning, soccer, football, Konami]
 image:
-  path: /assets/img/posts/psp/PES6_thumb.jpg   # 썸네일 & 미리보기
-  alt:  Pro Evolution Soccer 6 Boxart
+  path: /assets/img/posts/psp/PES6_thumb.jpg
+  alt: Pro Evolution Soccer 6 PSP Boxart
 ---
 
-## 📜 위닝일레븐10: 프로에볼루션사커6 (Pro Evolution Soccer 6 / ウイニングイレブン10)
-
-위닝 일레븐 10: 프로 에볼루션 사커 6는 2006년 10월 19일 일본에서, 북미·유럽에서는 Pro Evolution Soccer 6라는 제목으로 같은 해 11월에 발매된 축구 게임입니다.  
-코나미의 전설적인 ‘PES’ 시리즈 중에서도 그래픽·물리 엔진·AI 전술이 대폭 강화된 작품으로 평가받습니다.  
-주요 발매 플랫폼: PlayStation 2, Xbox 360, Microsoft Windows(PC), Nintendo DS, PlayStation Portable.  
-
----
-
-<!-- <img src="/assets/img/posts/ps1/DQM_front.jpg" alt="DQM 표지">
-![DQM표지](/assets/img/posts/ps1/DQM_front.jpg){: width="250px" } -->
+## 📜 위닝일레븐 10: 프로에볼루션 사커 6 (Pro Evolution Soccer 6 / ウイニングイレブン10)
 
 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
-  <img src="/assets/img/posts/psp/PES6_front.jpg" alt="위닝10 표지">
-  <img src="/assets/img/posts/psp/PES6_title.jpg" alt="위닝10 타이틀">
-  <img src="/assets/img/posts/psp/PES6_sc1.jpg" alt="위닝10 스샷">
-  <img src="/assets/img/posts/psp/PES6_sc2.jpg" alt="위닝10 스샷">
+  <img src="/assets/img/posts/psp/PES6_front.jpg" alt="위닝일레븐 10 PSP 표지">
+  <img src="/assets/img/posts/psp/PES6_title.jpg" alt="위닝일레븐 10 타이틀 화면">
+  <img src="/assets/img/posts/psp/PES6_sc1.jpg" alt="위닝일레븐 10 경기 화면">
+  <img src="/assets/img/posts/psp/PES6_sc2.jpg" alt="위닝일레븐 10 슛 장면">
 </div>
 
+---
 
-## ⚽ 주요 모드
-
-- **매치 모드**  
-  빠른 경기를 즐길 수 있는 표준 모드. 팀과 경기장, 날씨를 자유롭게 선택 가능.
-
-- **리그 & 컵 모드**  
-  UEFA 챔피언스 리그·컵위너스컵·UEFA컵 라이선스 수록. 각 대회를 통과하며 우승을 노립니다.
-
-- **챔피언십 모드**  
-  16팀 분할 리그를 치러 최강자를 결정하는 토너먼트 형식.
-
-- **온라인 모드**  
-  PS2 네트워크 어댑터를 사용해 전 세계 유저와 대전을 즐길 수 있습니다.
-
-- **마스터 리그**  
-  구단 운영부터 팀 빌딩, 이적 시장 관리까지 클럽 경영의 재미를 한 곳에 담은 장기 모드.
+**코나미** 개발·배급의 PSP용 축구 게임이다. PES 3~6으로 이어지는 **시리즈 황금기의 마지막 넘버링 타이틀**이자, PS2 엔진 기반의 마지막 PES다. 이후 PES 2008부터 차세대 엔진으로 전환되면서 시리즈가 크게 흔들렸기 때문에, PES 6는 "클래식 PES의 완성형"으로 팬들 사이에서 평가받는다. PSP판은 전작 PES 5 PSP의 문제점을 대폭 개선하고 **마스터 리그를 최초로 탑재**한 것이 핵심이다. 일본에서는 "위닝일레븐 10 유비쿼터스 에볼루션", 한국에서는 "위닝일레븐 10"으로 발매되었다. PSP판 메타크리틱 **81~82점**.
 
 ---
 
-## 🛠️ 핵심 시스템
+## 📅 위닝일레븐 10 PSP 출시 정보
 
-1. **완성도 높은 물리 엔진**  
-   공의 궤적·바운스·선수 충돌 판정이 실제 축구에 가깝게 재현됩니다.
+| 항목 | 내용 |
+|------|------|
+| 플랫폼 | PlayStation Portable |
+| 개발·배급 | Konami |
+| 유럽 발매 | 2006년 12월 1일 (Pro Evolution Soccer 6) |
+| 일본 발매 | 2006년 12월 14일 (WE10 Ubiquitous Edition) |
+| 한국 발매 | 2006년 12월 14일 (위닝일레븐 10) |
+| 북미 발매 | 2007년 2월 6일 (WE: PES 2007) |
+| 메타크리틱 | 81~82/100 |
+| 전 플랫폼 판매량 | 약 850만 장 |
 
-2. **정교한 AI 전술**  
-   상대 전력·진영에 따른 다양한 포메이션 자동 전환과, 동료 선수의 위치 선정·패스 타이밍이 자연스럽게 이루어집니다.
-
-3. **터치 & 슛 컨트롤**  
-   공 터치 감각을 살린 ‘퍼스트 터치’ 시스템과, 버튼 누르는 강약에 따라 궤적·속도가 달라지는 정밀 슛 메커니즘을 탑재했습니다.
-
-4. **선수 에디트 & 팀 커스터마이즈**  
-   이름·번호·스킬·외모 편집과, 나만의 엠블럼·유니폼 디자인으로 구단 아이덴티티를 부여할 수 있습니다.
-
----
-
-## 🎨 그래픽·사운드
-
-- **그래픽**  
-  PS2 한계에 근접한 고해상도 선수 모델과 경기장 디테일, 조명·그림자 효과로 역동적인 경기 연출을 제공합니다.
-
-- **사운드**  
-  관중 응원과 현장 음향을 실시간 믹싱하였으며, 국가·클럽별 공식 주제가와 해설 음성도 수록했습니다.
+PS2판은 2006년 4월(일본) / 10월(유럽)에 선행 발매되었다. PSP판은 약 2개월 후에 출시. 커버 선수는 **아드리아노**(인테르/브라질)와 **존 테리**(첼시/잉글랜드).
 
 ---
 
-## 🎯 추천 포인트
+## 📱 PSP판 특징 — PS2판과의 차이
 
-1. **진정한 축구의 재미**  
-   물리 엔진과 AI 전술이 조화를 이룬 경기 흐름으로 실제 경기 같은 몰입감을 선사합니다.
+PSP판은 PS2판을 휴대용으로 옮긴 이식판이지만, 하드웨어 한계로 인한 차이가 있다.
 
-2. **다양한 라이선스**  
-   UEFA 주요 대회 라이선스를 포함해 국제 대회 및 클럽 경기 모두 체험 가능합니다.
+### PSP판에 있는 것
 
-3. **콘텐츠 풍부함**  
-   마스터 리그를 통한 팀 운영부터 온라인 대전까지 다채로운 플레이 방식을 제공합니다.
+| 요소 | 설명 |
+|------|------|
+| **마스터 리그** | PSP 최초 탑재. 디비전 승격, 이적 시장, 선수 트레이드 포함 |
+| 애드혹 멀티플레이 | 로컬 무선 대전 지원 |
+| 리플레이 저장 | 경기 리플레이 저장 가능 (Xbox 360판에는 없던 기능) |
+| 리그 / 컵 / 트레이닝 / 에디트 | PS2판의 기본 모드 대부분 포함 |
 
-4. **높은 커스터마이즈성**  
-   선수·팀·유니폼 편집 기능으로 나만의 구단을 만들 수 있는 자유도를 제공합니다.
+### PSP판에 없는 것
+
+| 요소 | 비고 |
+|------|------|
+| 인터내셔널 챌린지 모드 | PS2/PC 전용. 시리즈 최초 도입된 국가대표 감독 모드 |
+| 랜덤 셀렉션 매치 | PS2/PC 전용 |
+| 해설 음성 | 골 장면에 짧은 음성만 나옴. 실질적으로 해설 없음 |
+| 온라인 대전 | 인프라스트럭처 미지원. 애드혹(로컬)만 가능 |
+| 풀 에디트 모드 | PS2 대비 편집 기능 축소 |
+| 카메라 앵글 | PS2 대비 선택 가능한 앵글 수 감소 |
+
+해설 없음과 온라인 미지원이 가장 아쉬운 부분이다. 반면 마스터 리그가 탑재된 것만으로도 PSP판의 가치는 전작 대비 크게 상승했다.
 
 ---
 
-## 🚀 맺음말
+## 🔄 PES 5 PSP vs PES 6 PSP 비교
 
-『위닝 일레븐 10: 프로 에볼루션 사커 6』는 PS2 최고의 축구 게임 중 하나로 손꼽힙니다.  
-현실적인 물리 연출과 깊이 있는 모드 구성으로, 축구 게임 팬이라면 반드시 플레이해 보아야 할 명작입니다.
+PES 5 PSP는 열악한 이식 퀄리티로 혹평받았다. PES 6 PSP는 그 문제점들을 대폭 개선했다.
 
+| 항목 | PES 5 PSP | PES 6 PSP |
+|------|----------|----------|
+| 마스터 리그 | **없음** | **탑재** (PSP 최초) |
+| 로딩 | 극심한 로딩 | 개선 (여전히 느린 편) |
+| 카메라 | 줌인 고정, 선택 불가 | 복수 앵글 선택 가능 |
+| AI | 단순 | 대폭 개선. 공 없을 때 움직임 자연스러워짐 |
+| PS2 재현도 | PS2와 괴리 큼 | **PS2에 근접한 수준** |
+| 태클 타이밍 | 부정확 | 현실적으로 개선 |
+| 패스·슛 감각 | 가벼움 | 무게감 있는 조작감 |
 
-<!-- *작성자: jjkkim88*  
-*발행일: 2025년 7월 11일*   -->
+전작이 "PSP에서 돌리긴 하는데 PS2와 별개의 게임" 수준이었다면, PES 6 PSP는 "PS2에 근접한 휴대용 위닝"으로 평가받았다. 마스터 리그 추가가 결정적이었다.
+
+---
+
+## ⚙️ PES 6 핵심 시스템 (전 플랫폼 공통)
+
+### 드리블 시스템 개편
+
+R2 버튼으로 **공을 몸에 바짝 붙이는 저속 드리블**이 도입되었다 (전작에서는 중간 속도 달리기). 수비수를 밀착해서 제치는 플레이가 가능해졌다.
+
+### 신규 페인트·트릭
+
+| 기술 | 조작 | 설명 |
+|------|------|------|
+| 매튜스 페인트 | 정지 상태에서 방향 전환 | 빠른 방향 변환으로 수비수 제치기 |
+| V-페인트 (드로백 사이드) | R2 + 뒤 → 45도 앞 | 공을 뒤로 빼다가 사선으로 돌파 |
+| 시저스 대시 | R2 더블탭 → 사선 | 시저스 후 가속 돌파 |
+| 뒤꿈치 리프트 슛 | 골 등진 상태에서 슛 | 기술 높은 선수 전용 |
+
+### AI 개선
+
+PES 6의 AI는 2006년 4Players 어워드에서 **"올해의 최고 AI"**를 수상했다. 공 없는 선수가 스스로 공간을 만들며 달리고, 패스를 요구하는 손짓까지 한다. 수비수는 몸싸움으로 포지션을 다투고, 공격수는 볼을 받을 때 마커를 등지고 돌아서는 동작이 추가되었다.
+
+### 슛·물리 엔진
+
+슛 타이밍과 선수의 몸 자세가 궤적에 영향을 미치는 정도가 전작보다 강화되었다. 프리킥 시 골키퍼 반응 속도가 빨라져, 장거리 프리킥 득점이 어려워졌다.
+
+---
+
+## ⚽ 라이선스·로스터
+
+### 수록 리그 (풀 라이선스)
+
+| 리그 | 비고 |
+|------|------|
+| 잉글랜드 프리미어리그 | |
+| 스페인 리가 (라리가) | |
+| 이탈리아 레가 칼초 (세리에 A) | |
+| 프랑스 리그 1 | **시리즈 최초 수록** |
+| 네덜란드 에레디비시 | |
+
+분데스리가는 라이선스 미보유로 미수록 (바이에른 뮌헨만 개별 라이선스). 유벤투스는 칼초폴리 스캔들로 세리에 B로 강등되어 리그 외 유럽팀으로 수록되었다.
+
+### 2006-07 시즌 주요 이적 반영
+
+2006 독일 월드컵 직후의 이적 시장이 반영되어 있다. 특히 칼초폴리로 인한 유벤투스 대이동이 핵심이다.
+
+- **인테르 밀란**: 이브라히모비치(유벤투스에서), 비에이라(유벤투스에서) 영입 → 아드리아노와 합류해 **게임 내 최강 팀**
+- **유벤투스**: 카나바로·에머슨(→레알), 투람·잠브로타(→바르사), 이브라(→인테르) 유출. 델 피에로·부폰·네드베드 잔류
+- **레알 마드리드**: 카나바로, 에머슨 영입
+
+### 전설의 선수 — 아드리아노
+
+PES 6 하면 빠질 수 없는 이름이다. 인테르 소속 **아드리아노**는 **슛 파워 99, 공격 90, 밸런스 98**이라는 압도적 능력치로 게임 역사상 가장 사기적인 선수로 기록된다. 인테르는 아드리아노 + 이브라히모비치 + 레코바 + 사네티 + 사무엘 등으로 구성된 게임 내 최강 팀이었으며, 프로듀서 다카츠카 신고가 인테르 팬이었다는 일화가 유명하다.
+
+그 외 **오바페미 마틴스**(속도 99 + 가속 99, 게임 내 최고 스피드), **레코바**(최고의 프리킥), **톨도**(최고의 GK) 등이 게임 내 전설적인 선수들이다.
+
+---
+
+## 🎨 위닝일레븐 10 PSP 그래픽·사운드
+
+- **그래픽**: PS2판에 근접한 선수 모델링과 경기장 표현을 PSP에서 구현했다. 전작 PES 5 PSP 대비 확연히 향상되어, "PS2의 축소판"이라 할 만한 수준이다. 다만 PSP 해상도(480×272) 한계로 원거리 선수 식별은 어려운 편이다.
+- **사운드**: 관중 응원과 효과음은 PS2판과 유사하게 재현되어 있다. 그러나 **해설이 사실상 없다** — 골 시 짧은 음성이 나오는 정도가 전부다. 해설 없이 관중 소리만 울리는 경기는 익숙해지면 나름대로 현장감이 있지만, PS2판과 비교하면 분명히 아쉽다.
+
+---
+
+## 🎯 위닝일레븐 10 PSP 추천 포인트
+
+1. **PSP 최고의 축구 게임** — PES 5 PSP의 문제점을 전면 개선. 마스터 리그 최초 탑재로 휴대용 위닝의 가치가 완성됨
+2. **PES 황금기의 마지막 작품** — 클래식 PS2 엔진의 완성형. 이후 PES 2008의 차세대 전환이 실패하면서, PES 6가 시리즈 전성기의 끝으로 평가됨
+3. **아드리아노와 인테르** — 슛 파워 99의 전설. PES 6 인테르는 축구 게임 역사에서 가장 사기적인 팀으로 기억된다
+4. **2006-07 시즌의 격변** — 칼초폴리 이후 유벤투스 해체, 인테르 부상 등 당시 축구계의 지각변동이 로스터에 반영됨
+
+---
+
+## 🎮 위닝일레븐 10 PSP 플레이 후기
+
+PES 5 PSP가 워낙 실망스러웠기 때문에 PES 6 PSP에 대한 기대치가 높지 않았는데, 실제로 해보면 전작과는 차원이 다른 게임이었다. 가장 큰 변화는 마스터 리그 추가다. 전작에서 엑시비션과 컵 모드만 있던 것이 얼마나 허전했는지, 마스터 리그가 들어오면서 비로소 "이래서 위닝을 하는 거지"라는 감각이 돌아왔다. 통학길에 마스터 리그 한두 경기씩 하는 게 일상이 되었다.
+
+조작감도 PES 5 PSP의 가벼운 느낌에서 벗어나 PS2에 근접한 무게감이 느껴졌다. 패스 한 번에도 방향과 강도를 신경 써야 하고, 드리블은 R버튼을 활용한 밀착 컨트롤이 재미있었다. AI가 눈에 띄게 좋아져서, 공 없는 선수들이 알아서 공간을 만들며 뛰어주는 것만으로도 전작 대비 체감이 달랐다.
+
+아드리아노와 인테르는 역시 사기였다. 친구들과 애드혹 대전에서 누가 인테르를 잡느냐로 매번 실랑이가 벌어졌다. 아드리아노의 슛이 골키퍼를 뚫고 들어가는 장면은 몇 번을 봐도 쾌감이 있었고, 대전 상대 입장에서는 그만큼 억울했다. 결국 "인테르 금지" 로컬 룰이 생기기도 했다.
+
+PSP판의 아쉬운 점은 역시 해설 부재와 로딩이다. 경기 중 해설이 없으니 골을 넣어도 조용한 관중 소리만 들리는 게 허전하다. 로딩도 PES 5보다 낫긴 하지만 여전히 느린 편이었다. 하지만 이런 불편함을 감수하고도 "어디서든 마스터 리그를 할 수 있다"는 것이 PSP판의 존재 이유였다.
+
+PES 6는 시리즈의 마지막 넘버링이자, PS2 엔진의 마지막 작품이다. 이후 PES 2008에서 차세대 엔진으로 전환하면서 시리즈가 크게 흔들렸고, 많은 팬들이 "PES 6 때가 좋았다"고 회상하게 된다. PSP에서 그 황금기의 끝을 경험할 수 있었다는 것은, 돌이켜보면 운이 좋았던 셈이다.
+
+---
+
+## 🔗 위닝일레븐 10 참고 링크
+
+- [Pro Evolution Soccer 6 - Wikipedia](https://en.wikipedia.org/wiki/Pro_Evolution_Soccer_6)
+- [Pro Evolution Soccer 6 - PES Wiki (Fandom)](https://proevolutionsoccer.fandom.com/wiki/Pro_Evolution_Soccer_6)
+- [Winning Eleven: PES 2007 PSP - Metacritic](https://www.metacritic.com/game/winning-eleven-pro-evolution-soccer-2007/)
+- [PES 6 PSP Review - Pocket Gamer](https://pocketgamer.com/pro-evolution-soccer-6/pro-evolution-soccer-6-psp-review)
