--- a/_posts/2026-02-09-ps1-mega-man-8.md
+++ b/_posts/2026-02-09-ps1-mega-man-8.md
@@ -1,69 +1,234 @@
 ---
-title: "(PS1) 록맨 8 (Mega Man 8)"
+title: "(PS1) 록맨 8 메탈 히어로즈 (Mega Man 8: Metal Heroes)"
+description: "PS1 록맨 8 메탈 히어로즈 리뷰. 시리즈 10주년 기념작, 8보스·볼트 상점·메가 볼, 악명 높은 스노보드 구간, PS1 vs 새턴 차이, 록맨 X7 비교, 영어 더빙 사건까지 정리합니다."
 date: 2026-02-09
 categories: [PS1]
 tags: [PS1, action, platformer, Rockman, MegaMan, Capcom]
 image:
-  path: /assets/img/posts/ps1/rockman8_front.jpg
-  alt: Mega Man 8 PS1
-  lqip: data:image/webp;base64,...
+  path: /assets/img/posts/ps1/rockman8_thumb.png
+  alt: Mega Man 8 PS1 Boxart
 ---
 
-## 📜 록맨 8: 메탈 히어로즈 (Mega Man 8 / ロックマン8 メタルヒーローズ)
-
-**록맨 8**은 캡콤이 발매한 액션 플랫폼 게임으로, 오리지널 록맨 시리즈의 **8번째 작품**입니다. 
-시리즈 최초로 **32비트 콘솔(PS1)** 환경을 본격적으로 활용한 타이틀로, 일본에서는 1996년에 플레이스테이션으로 먼저 출시되었고 이후 세가 새턴으로도 이식되었습니다.
-
----
+## 📜 록맨 8 메탈 히어로즈 (ロックマン8 メタルヒーローズ / Mega Man 8: Metal Heroes)
 
 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem;">
-  <img src="/assets/img/posts/ps1/rockman8_front.jpg" alt="록맨 8 표지">
-  <img src="/assets/img/posts/ps1/rockman8_title.png" alt="록맨 8 타이틀">
-  <img src="/assets/img/posts/ps1/rockman8_sc1.jpg" alt="록맨 8 스크린샷1">
-  <img src="/assets/img/posts/ps1/rockman8_sc2.jpg" alt="록맨 8 스크린샷2">
+  <img src="/assets/img/posts/ps1/rockman8_front.jpg" alt="록맨 8 PS1 표지">
+  <img src="/assets/img/posts/ps1/rockman8_title.png" alt="록맨 8 타이틀 화면">
+  <img src="/assets/img/posts/ps1/rockman8_sc1.jpg" alt="록맨 8 전투 화면">
+  <img src="/assets/img/posts/ps1/rockman8_sc2.jpg" alt="록맨 8 보스 전투 화면">
 </div>
 
-## 📅 출시 정보
-- 일본: **1996년**, PlayStation(PS1)로 출시
-- 북미/유럽: **Mega Man 8** 명칭으로 발매
-- 이식: 이후 **세가 새턴** 버전도 출시
+---
+
+**캡콤** 개발·배급의 PS1용 액션 플랫포머. 오리지널 록맨(클래식) 시리즈의 **8번째 작품**이자, 시리즈 최초의 **32비트 콘솔 타이틀**이다. 초대 록맨 발매일인 1987년 12월 17일에 맞춰 정확히 **9년 뒤인 1996년 12월 17일**에 일본 출시되었으며, 시리즈 **10주년 기념작**으로 기획되었다. 북미 초판에는 "Anniversary Collector's Edition" 부제와 함께 시리즈 역사를 정리한 **"Mega Man Anthology"** 컬러 소책자가 동봉되었다. PS1판 외에 세가 새턴판도 발매되었으며, 새턴판에는 보너스 보스와 추가 콘텐츠가 포함되어 있다. 애니메이션 제작사 **Xebec**이 참여한 약 14분 분량의 **애니메이션 컷신**이 삽입된 것도 클래식 시리즈 최초다.
 
 ---
 
-## 🛠️ 핵심 시스템
+## 📅 록맨 8 출시 정보
 
-1. **클래식 록맨식 스테이지 공략**  
-   스테이지를 선택해 클리어하고, 보스의 능력을 획득해 다음 공략에 활용하는 시리즈 전통의 흐름을 유지합니다.
+| 항목 | 내용 |
+|------|------|
+| 플랫폼 | PlayStation / Sega Saturn |
+| 개발·배급 | Capcom |
+| 유럽 배급 | Infogrames |
+| 일본 발매 (PS1) | 1996년 12월 17일 |
+| 일본 발매 (새턴) | 1997년 1월 17일 |
+| 북미 발매 (PS1) | 1997년 2월 28일 |
+| 유럽 발매 (PS1) | 1997년 10월 |
+| GameSpot | 6.3/10 (PS1) · 7.9/10 (새턴) |
+| 수록 컬렉션 | Mega Man Anniversary Collection (2004) / Mega Man Legacy Collection 2 (2017) |
 
-2. **32비트 세대 연출 강화**  
-   PS1 환경에서 애니메이션/연출이 한층 강화되면서, 시리즈 특유의 속도감 있는 플레이에 “보는 맛”이 더해졌습니다.
-
-3. **액션 플랫폼의 정석**  
-   점프·회피·무기 교체 중심의 직관적인 조작으로, 짧은 시간에도 손맛이 살아있는 전형적인 액션 게임입니다.
-
----
-
-## 🎨 그래픽·사운드
-
-- **그래픽**: 시리즈가 32비트 콘솔로 넘어오며 캐릭터/연출 표현이 더 풍부해졌습니다.
-- **사운드**: 스테이지 분위기를 살리는 BGM과 함께, 작품 특유의 경쾌한 템포가 유지됩니다.
+레거시 컬렉션 2에는 PS1판이 수록되어 새턴 전용 콘텐츠(컷맨·우드맨 보스전, 보너스 모드)는 포함되지 않았다.
 
 ---
 
-## 🎯 추천 포인트
+## 📖 록맨 8 스토리
 
-1. **오리지널 록맨 8번째 작품**  
-   시리즈 흐름을 따라가거나, 고전 액션을 좋아한다면 만족도가 높습니다.
+우주에서 두 로봇이 격돌한다. 정의의 우주 로봇 **듀오(Duo)**가 악의 에너지에 감염된 로봇을 쓰러뜨리지만, 둘 다 손상을 입고 운석과 함께 지구에 추락한다. **Dr. 와일리**는 운석에서 **이블 에너지(Evil Energy)** — 대상의 악의를 흡수해 증폭하는 자색 에너지 — 를 회수해 자신의 로봇 군단을 강화한다.
 
-2. **PS1에서 즐기는 클래식 록맨**  
-   휴대기/에뮬 등으로 “한 판씩” 즐기기 좋은 구조라, 부담 없이 플레이하기 좋습니다.
-
-3. **이름만 들어도 반가운 캡콤 액션**  
-   캡콤식 액션 플랫폼 감성을 좋아한다면 안전한 선택입니다.
+록맨은 추락 현장에서 부상당한 듀오를 발견하고, 이블 에너지의 위험성을 알게 된다. 전반 4보스를 격파한 뒤 Dr. 와일리의 중간 기지에서 대결하고, 듀오로부터 이블 에너지에 대한 설명을 듣는다. 이후 후반 4보스를 격파해 와일리 타워의 배리어를 해제하고, 최종 결전에서 **베이스(Bass)**와 Dr. 와일리를 쓰러뜨린다. 이블 에너지가 록맨에게 감염되지만, 듀오가 록맨의 마음속 정의를 감지하고 치유해 주면서 지구의 이블 에너지도 소멸한다.
 
 ---
 
-## 🚀 맺음말
+## 🤖 록맨 8 — 8보스와 특수 무기
 
-『록맨 8: 메탈 히어로즈』는 오리지널 록맨 시리즈를 32비트 콘솔 세대로 이어주는 중요한 작품입니다.  
-**PS1 액션 게임**을 찾고 있다면, 가볍게 꺼내서 플레이하기 좋은 “클래식 한 판”으로 추천합니다.
+### 전반 4보스 (시작 시 선택 가능)
+
+| 보스 | 스테이지 | 획득 무기 | 효과 |
+|------|---------|----------|------|
+| 텐구맨 (Tengu Man) | 하늘 | Tornado Hold | 적을 공중으로 띄우는 회오리 |
+| 클라운맨 (Clown Man) | 놀이공원 | Thunder Claw | 전격 공격 + 특정 지점 그래플 이동 |
+| 프로스트맨 (Frost Man) | 빙하 | Ice Wave | 지면을 따라 이동하는 빙결 파동 |
+| 그레네이드맨 (Grenade Man) | 폭발 기지 | Flash Bomb | 섬광 폭탄 |
+
+### 후반 4보스 (중간 스테이지 클리어 후 해금)
+
+| 보스 | 스테이지 | 획득 무기 | 효과 |
+|------|---------|----------|------|
+| 아스트로맨 (Astro Man) | 이차원 공간 | Astro Crush | 화면 전체 운석 공격 |
+| 소드맨 (Sword Man) | 유적 | Flame Sword | 근접 화염 검 |
+| 서치맨 (Search Man) | 숲 | Homing Sniper | 유도 미사일 |
+| 아쿠아맨 (Aqua Man) | 수중 | Water Balloon | 수구 투사체 |
+
+록맨 시리즈 전통인 **약점 상성**은 건재하다. 프로스트맨에게 Flash Bomb, 그레네이드맨에게 Thunder Claw 등 올바른 무기를 사용하면 보스전 난이도가 크게 낮아진다.
+
+---
+
+## ⚙️ 록맨 8 핵심 시스템
+
+### 볼트 상점 (Dr. 라이트 연구소)
+
+스테이지 곳곳에 숨겨진 **볼트(Bolt)** 40개가 화폐 역할을 한다. Dr. 라이트 연구소에서 **롤**이 운영하는 상점에서 파워업 아이템을 구매하는 시스템이다.
+
+| 아이템 (예시) | 가격 | 효과 |
+|-------------|------|------|
+| Power Shield | 6볼트 | 피격 시 넉백 제거 |
+| Shooting Part | 6볼트 | 버스터 동시 발사 5발 |
+| Laser Shot | 5볼트 | 차지 샷을 관통 레이저로 교체 |
+| Arrow Shot | 5볼트 | 차지 샷을 고위력 화살로 교체 |
+| Energy Balancer | 5볼트 | 에너지가 가장 낮은 무기 자동 충전 |
+| H.Speed Charge | 7볼트 | 차지 시간 단축 |
+
+전체 아이템 구매에 **89볼트**가 필요하지만 볼트는 **40개**뿐이므로, 모든 아이템을 살 수 없다. 플레이 스타일에 맞춰 **선택적으로 투자**해야 하는 전략적 요소가 있다.
+
+### 메가 볼 (Mega Ball)
+
+록맨 8에서 새로 추가된 고유 무기. 바운드하는 공을 발사하고 다시 차서 적에게 맞출 수 있다. 공 위에 올라서서 **높은 곳에 도달하는 발판 역할**도 겸하며, 숨겨진 아이템을 발견하는 데도 활용된다.
+
+### 러시 어댑터
+
+특정 스테이지의 미니보스를 격파하면 획득하는 러시 능력 4종.
+
+| 어댑터 | 획득 스테이지 | 효과 |
+|--------|-----------|------|
+| Rush Bike | 그레네이드맨 | 러시를 타고 고속 이동 + 점프 |
+| Rush Bomber | 클라운맨 | 러시가 화면 위를 날며 폭탄 투하 |
+| Rush Charger | 소드맨 | 받은 대미지 회복 |
+| Rush Health | 아쿠아맨 | 러시가 에너지 캡슐 투하 |
+
+### 듀얼 웨폰
+
+클래식 시리즈 최초로 **메가 버스터와 특수 무기를 동시에 장착**할 수 있다. 버스터로 잡몹을 처리하면서 보스 약점 무기를 준비하는 운용이 가능해졌다.
+
+---
+
+## 🏂 악명 높은 스노보드 구간
+
+록맨 8을 이야기할 때 빠지지 않는 것이 **자동 스크롤 스노보드(로켓 슬레드) 구간**이다.
+
+### 등장 위치
+
+- **프로스트맨 스테이지** 중반
+- **와일리 타워 스테이지 1** (더 길고 더 어려운 버전)
+
+### 무엇이 문제였나
+
+자동으로 전진하는 슬레드를 타고 장애물을 피해야 하는데, 화면에 **"Jump! Jump!"**, **"Slide! Slide!"** 음성이 나오며 조작을 지시한다. 문제는:
+
+1. **음성 품질이 극도로 낮아** 알아듣기 어렵다
+2. 장애물이 빠르게 연속되면 **음성이 겹쳐서** 혼란을 준다
+3. 어디서 죽든 **처음부터 재시작** — 중간 체크포인트가 없다
+4. 와일리 타워 1의 스노보드 구간에서 죽으면 **보스전 패배 시에도 스노보드부터 다시**
+
+"Jump! Jump! Slide! Slide!"는 록맨 시리즈에서 가장 유명한 밈 중 하나가 되었으며, **시리즈 역사상 가장 짜증나는 구간**으로 꼽힌다.
+
+---
+
+## 🎬 애니메이션 컷신과 영어 더빙
+
+### Xebec 제작 애니메이션
+
+CD-ROM 매체의 용량을 활용해 약 **14분**의 애니메이션 컷신이 삽입되었다. 클래식 록맨 시리즈 최초의 애니메이션 연출로, 듀오의 우주 전투, 이블 에너지의 위협, 최종 결전 등 핵심 장면을 애니메이션으로 표현했다.
+
+### 영어 더빙 — "Dr. 와와이" 사건
+
+록맨 8의 영어 더빙은 **게임 역사상 최악의 성우 연기** 중 하나로 꼽힌다. 캡콤이 비용 절감을 위해 **일본 현지에서 영어 더빙을 진행**했고, 성우 디렉션이 부실한 결과물이 나왔다.
+
+- **Dr. 라이트** 역의 Jack Evans가 "Doctor Wily"를 **"Doctah Wahwee"**로 발음하는 것이 인터넷 밈이 되었다
+- 클라운맨, 아쿠아맨의 고음 목소리, 듀오의 힘없는 톤 등이 비판받았다
+- 록맨 X4와 동시에 **같은 성우진**으로 더빙되었다 (주역 Ruth Shiraishi가 두 게임에 동시 캐스팅된 것을 몰랐다는 일화가 있다)
+- 일본어 음성은 상대적으로 양호하다는 평가
+
+---
+
+## 🎮 PS1판 vs 새턴판
+
+| 항목 | PS1 | 새턴 |
+|------|-----|------|
+| 보너스 보스 | 없음 | **컷맨 + 우드맨** 보스전 추가 |
+| 보너스 모드 | 없음 | **갤러리·사운드 테스트·FMV 테스트** |
+| 텐구맨 BGM | PS1 원곡 | **완전히 다른 어레인지** |
+| 아쿠아맨 BGM | 원곡 | **슬로우 템포 + 악기 추가** |
+| 음성 압축 | 고품질 | 약간 열화 (비트레이트 낮음) |
+| 음악 시스템 | 내장 MIDI | **PCM 인코딩** |
+| 수면 효과 | 기본 | **물결 리플 애니메이션 추가** |
+| 유통 | 전 세계 | 일본·북미만 (유럽 미발매) |
+| GameSpot | 6.3/10 | **7.9/10** |
+
+새턴판은 **컷맨**(록맨 1)과 **우드맨**(록맨 2)이 보너스 보스로 등장하며, 원작 NES 테마곡의 리믹스 BGM이 흘러나온다. GameSpot에서 새턴판이 1.6점 높은 점수를 받은 것은 이러한 추가 콘텐츠와 음악 어레인지 덕분이다.
+
+---
+
+## ⚔️ 록맨 8 vs 록맨 X7 — 시리즈의 전환점
+
+록맨 8과 록맨 X7은 각각 클래식 시리즈와 X 시리즈에서 **"전환을 시도했으나 호불호가 갈린 작품"**이라는 공통점이 있다. 록맨 8은 8비트에서 32비트로, X7은 2D에서 3D로의 전환이었다.
+
+| 항목 | 록맨 8 (PS1, 1996) | 록맨 X7 (PS2, 2003) |
+|------|-------------------|-------------------|
+| 세대 전환 | 8비트 → **32비트** | 2D → **3D** |
+| 핵심 게임플레이 | 2D 플랫포머 유지 (견고) | 3D 전환 실패 (카메라·조작 문제) |
+| 주인공 문제 | 록맨 처음부터 플레이 가능 | **엑스 초반 사용 불가** (64명 구출 필요) |
+| 새 캐릭터 | 듀오 (호평) | 액슬 (엑스와 차별점 부족) |
+| 영어 더빙 | 나쁨 ("Dr. 와와이") | **더 나쁨** (플레임 하이에나드 "BURN!" 밈) |
+| 불만 구간 | 스노보드 자동 스크롤 | **게임 전체의 카메라** |
+| 로딩 | 보통 | **극심** (최종 보스 러시 로딩 18회) |
+| 비주얼 | 당시 기준 호평 | PS2 기준 평범 |
+| 평가 | 혼재 (GS 6.3~7.9) | **부정적** (메타크리틱 58) |
+| 시리즈 내 위치 | 논란 있지만 재평가 중 | **X 시리즈 최악**으로 평가 |
+
+록맨 8은 2D 플랫포머로서의 기본기를 유지한 채 비주얼만 업그레이드한 반면, X7은 3D라는 근본적인 구조 변경에서 실패했다. 록맨 8의 문제점(스노보드 구간, 더빙)은 게임의 일부분이지만, X7의 문제점(카메라, 조작, 주인공 부재)은 게임 전체에 걸쳐 있다. 결과적으로 록맨 8은 시간이 지나면서 재평가되는 경향이 있는 반면, X7은 여전히 X 시리즈 최하위권에 머물러 있다.
+
+---
+
+## 🎨 록맨 8 그래픽·사운드
+
+- **그래픽**: 32비트 콘솔로 넘어오면서 클래식 시리즈 역대 가장 화려한 비주얼을 실현했다. 배경의 디테일, 캐릭터 스프라이트의 애니메이션 프레임 수, 보스 등장 연출 모두 NES·SNES 시절과는 차원이 다르다. 놀이공원(클라운맨), 유적(소드맨), 수중(아쿠아맨) 등 스테이지별 테마가 뚜렷하고, Xebec 제작 애니메이션 컷신의 퀄리티도 높다.
+- **사운드**: CD 음질의 BGM은 시리즈 전통의 경쾌한 템포를 유지하면서 음향 표현력이 크게 향상되었다. 텐구맨 스테이지의 하이템포 BGM, 오프닝 테마 "Electrical Communication"이 팬들 사이에서 인기곡이다. 다만 영어 더빙의 퀄리티는 위에서 서술한 대로 심각한 수준이다.
+
+---
+
+## 🎯 록맨 8 추천 포인트
+
+1. **시리즈 10주년 기념작** — 초대 록맨과 같은 날짜에 발매된 기념비적 타이틀. 클래식 시리즈의 32비트 데뷔작
+2. **볼트 상점의 전략성** — 40개 볼트로 89볼트어치 아이템 중 선택해야 하는 자원 관리. 회차별로 다른 빌드를 시도할 수 있다
+3. **클래식 시리즈 최고 비주얼** — 32비트 콘솔의 표현력을 활용한 화려한 스프라이트 + Xebec 애니메이션 컷신
+4. **새턴판의 보너스 콘텐츠** — 컷맨·우드맨 보스전, 보너스 모드, 텐구맨 어레인지 BGM 등 PS1판에 없는 추가 요소
+
+---
+
+## 🎮 플레이 후기
+
+록맨 8은 "클래식 록맨의 32비트 버전"이라는 기대에 대해 반은 맞고 반은 아쉬운 게임이다.
+
+먼저 좋은 점부터. 32비트로 올라온 비주얼은 확실히 인상적이다. NES 시절의 도트가 좋은 추억이긴 하지만, 클라운맨 스테이지의 놀이공원이나 소드맨 스테이지의 고대 유적을 보면 "록맨이 이렇게 화려할 수도 있구나" 싶다. 보스 디자인도 개성적이고, 약점 무기로 공략하는 전통적인 재미는 건재하다. 볼트 상점 시스템은 단순히 아이템을 모으는 것이 아니라 **"한정된 자원으로 뭘 살 것인가"**를 고민하게 만들어서 회차 플레이 동기를 준다. Laser Shot 빌드와 Arrow Shot 빌드의 차이가 체감될 정도다.
+
+전투 자체의 손맛도 나쁘지 않다. 메가 볼이라는 신규 무기가 의외로 활용도가 높아서, 공을 차서 적을 맞추거나 공 위에 올라서서 숨겨진 볼트에 접근하는 등 탐색 요소와 전투를 연결해 준다. 듀얼 웨폰 — 버스터와 특수 무기 동시 장착 — 도 클래식 시리즈 최초 도입인데, 무기 교체 빈도가 줄어서 플레이 흐름이 좋아졌다.
+
+문제는 **스노보드 구간**이다. 프로스트맨 스테이지에서 처음 등장할 때는 "좀 어렵지만 참을 만하다" 수준이지만, 와일리 타워 1의 스노보드는 차원이 다르다. 장애물 배치가 암기를 요구하고, 한 번이라도 틀리면 처음부터. 보스한테 져도 처음부터. "Jump! Jump! Slide! Slide!" 음성이 귓가에 맴도는 경험을 하게 된다. 이 구간 하나가 게임 전체의 인상을 깎아 먹는다.
+
+난이도는 NES 록맨에 비하면 확실히 쉬운 편이다. 록맨 2, 3의 난이도를 기대하면 물렁물렁하게 느껴질 수 있다. 보스들도 약점 무기를 쓰면 금방 끝나고, 스테이지 길이도 짧은 편이다. 스노보드를 제외하면 "너무 쉽다"는 것이 비판 포인트였고, 이 점은 동의한다.
+
+영어 더빙은 — 직접 들어봐야 이해할 수 있다. Dr. 라이트가 "We must recuvah all ze enehgy"라고 말하는 것을 듣고 있으면 진지한 스토리 분위기가 완전히 무너진다. 일본어 음성이 있다면 그쪽을 강력 추천한다.
+
+록맨 X7과 비교하면, 록맨 8은 **훨씬 나은 게임**이다. X7은 2D에서 3D로의 전환 자체가 실패해서 게임의 근본이 흔들렸지만, 록맨 8은 2D 플랫포머로서의 뼈대가 견고하다. 록맨 8의 문제는 스노보드 구간과 더빙이라는 "부분적" 결함이고, X7의 문제는 카메라·조작·주인공 부재라는 "구조적" 결함이다. 록맨 8은 좋은 스테이지와 보스전이 스노보드의 악몽을 상쇄해 주지만, X7은 게임 전체가 고통이다.
+
+결론적으로 록맨 8은 **스노보드 구간과 영어 더빙이라는 두 개의 큰 흠이 있지만, 그 외의 부분은 충분히 즐길 수 있는 클래식 록맨**이다. 10주년 기념작다운 화려한 비주얼과 볼트 상점의 전략성은 시리즈에서도 독자적인 매력이 있다. 레거시 컬렉션 2로 현대 플랫폼에서도 플레이 가능하니, 클래식 록맨 팬이라면 한 번은 경험해 볼 가치가 있다.
+
+---
+
+## 🔗 록맨 8 참고 링크
+
+- [Mega Man 8 - Wikipedia](https://en.wikipedia.org/wiki/Mega_Man_8)
+- [Mega Man 8 - Mega Man Knowledge Base](https://megaman.fandom.com/wiki/Mega_Man_8)
+- [Mega Man Legacy Collection 2 - Capcom](https://www.megaman-legacy-collection.com/)
+- [Mega Man X7 - Metacritic](https://www.metacritic.com/game/mega-man-x7/)
